# Z-T1

./: .gitignore  README.md  build_fw.bat  build_fw.ps1  build_log.txt
.kiro/skills/: esp32-firmware-dev.md  flutter-app-dev.md
.kiro/specs/: app-phase1-a1-detailed.yml  app-phase1-a1-entry.yml  architecture-decisions.yml  firmware-phase2-b1-detailed.yml  firmware-phase2-b1-hal.yml
.kiro/steering/: ai-role-charter.md  git-safety-charter.md
firmware/ridewind-esp/: UX测试大纲.md  build_check.bat  build_single.bat
firmware/zcritical-esp/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/zcritical-esp/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/zcritical-esp/main/core/hal/: hal_audio.c  hal_audio.h  hal_encoder.c  hal_encoder.h  hal_gpio.c  hal_gpio.h  hal_lcd.c  hal_lcd.h  hal_led.c  hal_led.h  hal_pwm.c  hal_pwm.h
firmware/zcritical-esp/main/core/protocol/: proto_ble.c  proto_ble.h  proto_dispatch.c  proto_dispatch.h  proto_parser.c  proto_parser.h
firmware/zcritical-esp/main/core/state/: app_state.c  app_state.h  state_audio.h  state_fan.h  state_led.h  state_logo.h  state_ui.h
firmware/zcritical-esp/main/modules/audio/: audio_module.c  audio_module.h
firmware/zcritical-esp/main/modules/display/: display_module.c  display_module.h
firmware/zcritical-esp/main/modules/encoder/: encoder_module.c  encoder_module.h
firmware/zcritical-esp/main/modules/fan/: fan_module.c  fan_module.h
firmware/zcritical-esp/main/modules/led/: led_module.c  led_module.h
firmware/zcritical-esp/main/modules/logo/: logo_module.c  logo_module.h
firmware/zcritical-esp/main/modules/wifi/: wifi_module.c  wifi_module.h
firmware/zcritical-esp/main/ui/: ui_demo.c  ui_demo.h  ui_port.c  ui_port.h
steering/: START-HERE.md
steering/archived/: ai-onboarding.md  development-blueprint.md  engineering-rhythm.md  firmware-reconstruction-blueprint.md  global-development-roadmap.md  product-context.md  product-requirements-audit.md
steering/decisions/: DR-001-ble-protocol.md  DR-002-audio-engine.md  DR-003-lcd-lvgl-migration.md  README.md
steering/guides/: START-HERE.md  ai-proactive-guidance.md  git-workflow.md  multi-session-collaboration.md  naming-conventions.md  ui-review-checklist.md  ux-guidelines.md
steering/knowledge/: ai-capability-profile.md  ble-dev-experience.md  (+5 more)
zcritical/: README.md  pubspec.yaml
(+110 files in other folders)
